# rustydns

./: .gitignore  Cargo.toml  Makefile  README.md  build.sh  deploy.sh  ydns.service  ydns.yaml.tpl
src/: commands.rs  config.rs  file_utils.rs  lib.rs  logging.rs  main.rs  ydns_client.rs
src/commands/: ip.rs  mod.rs  update.rs
