[package]
name = "ydns-updater"
version = "0.3.1"
edition = "2021"
authors = ["Victor Englund"]
description = "An YDNS updater"
repository = "https://github.com/englund/ydns-updater"

[dependencies]
clap = { version = "4.3.8", features = ["derive"] }
reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.28.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4.19"
simplelog = "0.12.1"
