[package]
name = "ydns"
version = "0.3.2"
edition = "2021"
authors = ["Victor Englund"]
description = "An YDNS updater"
repository = "https://github.com/englund/rustydns"

[dependencies]
clap = { version = "4.3.8", features = ["derive"] }
reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.28.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
